--- a/index.html
+++ b/index.html
@@ -1545,7 +1545,7 @@
             
             <div class="footer-bottom">
                 <p>© <span id="currentYear"></span> Boussola Store. جميع الحقوق محفوظة</p>
-                 <p class="ra4ad">developed by <a href="https://www.instagram.com/mu7amed_ra4ad/" target="_blank">Mohamed Rashad</a> </p>
+                 <p  id="currentYear">developed by <a href="https://www.instagram.com/mu7amed_ra4ad/" target="_blank">Mohamed Rashad</a> </p>
             </div>
         </div>
     </footer>
@@ -2346,4 +2346,5 @@
 </body>
 
 </html>
+
 
