--- a/index.html
+++ b/index.html
@@ -1145,6 +1145,11 @@
             border-top: 1px solid rgba(255, 255, 255, 0.1);
             color: var(--text-secondary);
         }
+          .footer-bottom .mohamed a{
+              text-decoration: none;
+              font-weight: bold;
+              {
+        
 
         /* ========== NOTIFICATIONS ========== */
         .notification {
@@ -1545,7 +1550,7 @@
             
             <div class="footer-bottom">
                 <p>© <span id="currentYear"></span> Boussola Store. جميع الحقوق محفوظة</p>
-                 <p  id="currentYear">developed by <a href="https://www.instagram.com/mu7amed_ra4ad/" target="_blank">Mohamed Rashad</a> </p>
+                 <p class="mohamed">developed by <a href="https://www.instagram.com/mu7amed_ra4ad/" target="_blank">Mohamed Rashad</a> </p>
             </div>
         </div>
     </footer>
@@ -2346,5 +2351,6 @@
 </body>
 
 </html>
+
 
 
