--- a/index.html
+++ b/index.html
@@ -1592,14 +1592,14 @@
                 price: 900, 
                 originalPrice: 1000, // After 10% discount: 900
                 category: 'zipper', 
-                colors: ['أسود', 'رمادي فاتح', 'كحلي', 'بوردو'], 
+                colors: ['أسود', 'زيتي'], 
                 sizes: ['S', 'M', 'L', 'XL'], 
                 description: 'هودي زيب بوكسفيت بسحاب كامل، تصميم عصري وعملي. سهل الارتداء والخلع.',
                 image: 'zipper.jpg',
                 features: [
                     { icon: 'fas fa-zipper', text: 'سحاب كامل' },
                     { icon: 'fas fa-layer-group', text: 'طبقتين' },
-                    { icon: 'fas fa-palette', text: '4 ألوان' }
+                    { icon: 'fas fa-palette', text: '2 ألوان' }
                 ],
                 badge: 'جديد'
             },
@@ -1609,7 +1609,7 @@
                 price: 1650, 
                 originalPrice: 1833, // After 10% discount: 1650
                 category: 'premium', 
-                colors: ['أسود كربون', 'رمادي فحمي', 'أبيض عاجي', 'أحمر غامق'], 
+                colors: ['أسود', 'زيتي'],
                 sizes: ['S', 'M', 'L', 'XL', 'XXL'], 
                 description: 'هودي فول ستايل  بجودة فائقة وتصميم مميز. يناسب جميع المناسبات ويوفر أقصى درجات الراحة.2هودي ',
                 image: 'fullstyle2.jpg',
@@ -1626,7 +1626,7 @@
                 price: 850, 
                 originalPrice: 944, // After 10% discount: 850
                 category: 'hoodie', 
-                colors: ['بيج', 'رمادي داكن', 'أخضر زيتون', 'برتقالي'], 
+                colors: ['أسود', 'زيتي'],
                 sizes: ['M', 'L', 'XL', 'XXL'], 
                 description: 'هودي أوفرسايزد بتصميم فضفاض ومريح. مثالي للشكل الكاجوال والمظهر العصرى مناسب للبنات .',
                 image: 'girl.jpg',
@@ -1643,7 +1643,7 @@
                 price: 800, 
                 originalPrice: 833, // After 10% discount: 750
                 category: 'hoodie', 
-                colors: ['وردي', 'أبيض', 'أصفر', 'أزرق سماوي'], 
+                colors: ['أسود', 'زيتي'],
                 sizes: ['XS', 'S', 'M'], 
                 description: 'بريميوم هودي انيق وثقيل بتصميم عصري وانيق.',
                 image: 'premuim.jpg',
@@ -1660,7 +1660,7 @@
                 price: 950, 
                 originalPrice: 1055, // After 10% discount: 950
                 category: 'premium', 
-                colors: ['أسود', 'كاكي', 'بني', 'رمادي فولاذي'], 
+                colors: ['أسود', 'زيتي'],
                 sizes: ['S', 'M', 'L', 'XL', 'XXL'], 
                 description: 'هودي ثقيل الوزن مصنوع ليدوم طويلاً. مثالي للطقس البارد والاستخدام المكثف.',
                 image: 'fullstyle.jpg',
@@ -1923,6 +1923,7 @@
                 'أصفر': '#FFFF00',
                 'برتقالي': '#FFA500',
                 'كاكي': '#C3B091',
+                'زيتي': '#808000',
                 'بني': '#8B4513'
             };
             return colorMap[colorName] || '#808080';
@@ -2351,6 +2352,7 @@
 </body>
 
 </html>
+
 
 
 
